--- a/ImageFusion/requirements.txt
+++ b/ImageFusion/requirements.txt
@@ -1,25 +1,92 @@
+absl-py==0.13.0
 asgiref==3.4.1
+astroid==2.9.0
+astunparse==1.6.3
+autopep8==1.6.0
+cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
+colorama==0.4.4
+coverage==5.5
 cryptography==3.4.7
+cycler==0.11.0
 defusedxml==0.7.1
+distlib==0.3.4
 Django==3.2.6
 django-allauth==0.45.0
+django-cors-headers==3.7.0
 django-extensions==3.1.3
+django-templated-mail==1.1.1
+djangorestframework==3.12.4
+djoser==2.0.3
+filelock==3.4.2
+flatbuffers==1.12
+gast==0.4.0
+google-auth==1.33.1
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+grpcio==1.34.1
+gunicorn==20.1.0
+h5py==3.1.0
 idna==3.2
+imageio==2.16.2
+isort==5.10.1
+Keras==2.4.3
+keras-nightly==2.5.0.dev2021032900
+Keras-Preprocessing==1.1.2
+kiwisolver==1.0.1
+lazy-object-proxy==1.7.1
+Markdown==3.3.4
+matplotlib==3.4.2
+mccabe==0.6.1
+mysql-connector-python==8.0.28
+networkx==2.8
+numpy==1.22.3
 oauthlib==3.1.1
+opencv-contrib-python==4.5.5.64
+opencv-python==4.5.5.64
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.3.0
 Pillow==8.3.2
+platformdirs==2.4.0
+protobuf==3.17.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.8.0
 pycparser==2.20
 PyJWT==2.1.0
+pylint==2.12.2
+pylint-django==2.4.4
+pylint-plugin-utils==0.6
 pyOpenSSL==20.0.1
+pyparsing==2.4.7
+python-dateutil==2.7.3
 python3-openid==3.2.0
 pytz==2021.1
+PyWavelets==1.3.0
+PyYAML==5.4.1
 requests==2.26.0
 requests-oauthlib==1.3.0
+rsa==4.7.2
+scikit-image==0.19.2
+scipy==1.7.0
 six==1.16.0
 social-auth-app-django==5.0.0
 social-auth-core==4.1.0
-sqlparse==0.4.2
+sqlparse==0.4.1
+tensorboard==2.5.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.5.0
+tensorflow-estimator==2.5.0
+termcolor==1.1.0
+tifffile==2022.4.8
+toml==0.10.2
+typing_extensions==4.0.1
 urllib3==1.26.6
+virtualenv==20.13.0
 Werkzeug==2.0.1
+whitenoise==5.2.0
+wrapt==1.13.3
